// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel] format 1`] = `
"Unexpected token (1:9)
> 1 | export *, {} from "foo";
    |         ^"
`;

exports[`snippet: #1 [babel] format 1`] = `
"Unexpected token, expected "from" (1:21)
> 1 | export * as foo, {} from "foo";
    |                     ^"
`;

exports[`snippet: #2 [babel] format 1`] = `
"Unexpected token (1:9)
> 1 | export *, {bar} from "foo";
    |         ^"
`;

exports[`snippet: #3 [babel] format 1`] = `
"Unexpected token, expected "from" (1:24)
> 1 | export * as foo, {bar} from "foo";
    |                        ^"
`;
